# CppParticleSystem

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main
include/: Particle.hpp  Screen.hpp  Swarm.hpp
src/: Particle.cpp  Screen.cpp  Swarm.cpp  main.cpp
